--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -577,6 +577,63 @@ a {
     font-weight: 300;
     width: 100%;
 }
+.privilege {
+    background-color: var(--bg);
+}
+.privilege_item_top_count {
+    width: 48px;
+    height: 48px;
+    border: 1px solid var(--light);
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 100%;
+    text-align: center;
+    color: var(--accent);
+}
+.privilege_item_top_text {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 140%;
+    color: var(--dark);
+}
+.privilege_item_bottom {
+    border: 1px solid var(--light);
+    border-radius: 6px;
+    width: 100%;
+}
+.privilege_item_bottom_text {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 140%;
+    color: var(--dark);
+}
+
+.mission_item_icon {
+    width: 48px;
+    height: 48px;
+    border: 1px solid var(--light);
+}
+.mission_item_text {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--dark);
+}
+.contacts {
+    background-color: var(--dark);
+    color: #fff;
+}
+.contacts_item_icon {
+    width: 48px;
+    height: 48px;
+    border: 1px solid var(--light);
+}
+.info_title {
+    font-size: 20px;
+}
+.contacts_item_text {
+    font-size: 20px;
+}
 
 @media (min-width: 475px) {
     .swiper.mySwiper {
@@ -616,6 +673,21 @@ a {
     .itemSwiper .swiper-pagination-bullet {
         width: 4px;
         height: 4px;
+    }
+    .privilege_item_top_text {
+        font-size: 18px;
+    }
+
+    .privilege_item_bottom {
+        height: 72px;
+    }
+    .privilege_item_bottom_text {
+        font-size: 16px;
+        line-height: 120%;
+    }
+
+    .info_title {
+        font-size: 28px;
     }
 }
 
