--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,15 @@
 .loading {
     background: #fff;
     position: fixed;
+    left: 0;
+    top: 0;
     width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 10000;
+    overflow: hidden;
 }
 .loading > svg {
     max-width: 20vw;
