--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,7 @@
     overflow: hidden;
 }
 .loading > svg {
-    max-width: 10vw;
-    max-height: 10vh;
+    max-width: 33vw;
 }
 
 :root {
@@ -706,13 +705,6 @@ a {
 @media (min-width: 992px) {
     .slide_info_title {
         font-size: 32px;
-        line-height: 100%;
-        white-space: nowrap;
-        min-height: auto;
-        min-height: 68px;
-        overflow: auto; /* Скрывает переполненный текст */
-        text-overflow: unset; /* Добавляет многоточие в конце */
-        white-space: inherit;
     }
     .slide_info_price {
         font-size: 32px;
@@ -775,4 +767,63 @@ a {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+.car {
+    &__body {
+        animation: shake 0.2s ease-in-out infinite alternate;
+    }
+
+    &__line {
+        transform-origin: center right;
+        stroke-dasharray: 22;
+        animation: line 0.8s ease-in-out infinite;
+        animation-fill-mode: both;
+
+        &--top {
+            animation-delay: 0s;
+        }
+
+        &--middle {
+            animation-delay: 0.2s;
+        }
+
+        &--bottom {
+            animation-delay: 0.4s;
+        }
+    }
+}
+
+@keyframes shake {
+    0% {
+        transform: translateY(-1%);
+    }
+    100% {
+        transform: translateY(3%);
+    }
+}
+
+@keyframes line {
+    0% {
+        stroke-dashoffset: 22;
+    }
+
+    25% {
+        stroke-dashoffset: 22;
+    }
+
+    50% {
+        stroke-dashoffset: 0;
+    }
+
+    51% {
+        stroke-dashoffset: 0;
+    }
+
+    80% {
+        stroke-dashoffset: -22;
+    }
+
+    100% {
+        stroke-dashoffset: -22;
+    }
 }
