--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,9 +19,9 @@
 
 :root {
     --bg: #f5f5f5;
-    --accent: #f44336;
+    --accent: #b30d00;
     --dark: #212121;
-    --light: #9e9e9e;
+    --light: #595959;
     --middle: #616161;
 }
 #search {
