--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -620,6 +620,10 @@ a {
 }
 .btn_filter {
     transition: all 0.3s ease;
+    margin-bottom: 72px;
+}
+.btn_filter.margin_bottom {
+    margin-bottom: 72px;
 }
 .emptyBlock.fix {
     height: 49px;
