--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,8 +36,8 @@ body {
 }
 
 body {
-    color: var(--foreground);
-    background: var(--background);
+    color: var(--dark);
+    background: #fff;
     font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
